# sleepy-cat

./: README.ar.md  README.es.md  README.hi.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build-windows.yml  verify-autosend.yml
docs/: install-macos.md
docs/plans/: 2026-05-31-always-visible-floating-button-repair-v2.md  2026-05-31-always-visible-floating-button-repair.md  2026-05-31-always-visible-floating-button.md  2026-07-01-global-prompt-picker-flow.md  2026-07-02-actionable-autosend-permission-ux.md  2026-07-02-autosend-feedback-status.md  2026-07-02-codex-prompt-autosend.md  2026-07-02-native-autosend-event-injection.md  2026-07-02-openwhip-focus-autosend-v2.md  2026-07-02-openwhip-foreground-autosend.md  2026-07-02-openwhip-style-autosend.md  2026-07-03-calico-character-throw-motion-system.md  2026-07-03-calico-stability-and-prompt-manager.md  2026-07-03-prompt-containers-and-groups.md  2026-07-03-prompt-picker-ui-polish-and-group-editor.md  2026-07-04-refine-main-window-settings-and-manager-ui.md  2026-07-04-reset-hover-preview-on-popover-open.md  2026-07-05-async-autosend-responsiveness.md  2026-07-05-calico-rich-idle-motion-director.md  2026-07-05-prompt-manager-sidebar-scroll-polish.md  2026-07-06-prompt-library-file-sync.md  2026-07-06-prompt-library-sync-review-fixes.md  2026-07-07-autosend-review-test-alignment-fix.md  2026-07-07-autosend-target-recovery.md  (+5 more)
public/: overlay-interaction.html  overlay.html  paper-flight.html
scripts/: generate-menubar-icon.py  run-calico-webview-probe.mjs  sign-macos-bundle.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  menubar-template.rgba
src-tauri/src/: lib.rs  macos_panels.rs  overlay_position.rs  windows.rs
src-tauri/src/platform/: macos.rs  mod.rs  unsupported.rs
src-tauri/src/platform/macos/: autosend_transaction.rs  ax_client.rs  ax_diagnostics.rs  composer_resolver.rs  focus_controller.rs  input_profiles.rs  process_group.rs
src-tauri/tests/fixtures/ax/: ambiguous-inputs.json  appkit-composer.json  claude-composer.json  electron-contenteditable.json  wechat-composer.json
(+51 files in other folders)
