[package]
name = "prompt-picker"
version = "1.0.6"
description = "Local macOS Prompt Picker"
authors = [""]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "prompt_picker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25.0"
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSWindow", "NSPanel", "NSColor", "NSEvent", "block2"] }
objc2-foundation = { version = "0.3.2", features = ["NSGeometry", "NSObject", "NSString", "NSValue"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "objc2-app-kit"] }
